# aiosqs

./: .env_example  .pre-commit-config.yaml  LICENSE  MAINTAIN.md  Makefile  README.md  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: lint.yml  test310.yml  test311.yml  test312.yml  test313.yml  test38.yml  test39.yml
aiosqs/: __init__.py  client.py  encryption.py  exceptions.py  parser.py  types.py
aiosqs/tests/: cases.py  test_client.py  test_delete_message.py  test_errors.py  test_get_queue_url.py  test_receive_message.py  test_send_message.py  utils.py
aiosqs/tests/fixtures/: delete_message.xml  error.xml  error_500.xml  error_invalid_access_key.xml  error_invalid_secret_key.xml  error_invalid_session_token.xml  error_signature.xml  get_queue_url.xml  get_queue_url_namespace.xml  get_queue_url_not_exists_yandex_cloud.xml  receive_message.xml  receive_message_empty.xml  receive_message_ugly.xml  receive_messages.xml  send_message.xml
e2e/: test_e2e.py
